; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_expand.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_expand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph_v2 = type { %struct.TYPE_2__, %struct.TYPE_2__, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.graph_v2*)* @graph_expand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @graph_expand(%struct.graph_v2* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.graph_v2*, align 8
  store %struct.graph_v2* %0, %struct.graph_v2** %3, align 8
  br label %4

4:                                                ; preds = %41, %1
  %5 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %6 = call i64 @graph_needs_expansion(%struct.graph_v2* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %42

8:                                                ; preds = %4
  %9 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %10 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %11 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %10, i32 0, i32 2
  %12 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %13 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @graph_insert_column(%struct.graph_v2* %9, %struct.TYPE_2__* %11, i32 %15, i32* null)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %43

19:                                               ; preds = %8
  %20 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %21 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %22 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %21, i32 0, i32 1
  %23 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %24 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @graph_insert_column(%struct.graph_v2* %20, %struct.TYPE_2__* %22, i32 %26, i32* null)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %43

30:                                               ; preds = %19
  %31 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %32 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %33 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %32, i32 0, i32 0
  %34 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %35 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @graph_insert_column(%struct.graph_v2* %31, %struct.TYPE_2__* %33, i32 %37, i32* null)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %30
  store i32 0, i32* %2, align 4
  br label %43

41:                                               ; preds = %30
  br label %4

42:                                               ; preds = %4
  store i32 1, i32* %2, align 4
  br label %43

43:                                               ; preds = %42, %40, %29, %18
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i64 @graph_needs_expansion(%struct.graph_v2*) #1

declare dso_local i32 @graph_insert_column(%struct.graph_v2*, %struct.TYPE_2__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
